--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
 
                 <div class="btns">
                     <ul>
-                    <li class="api-league">
-                         <input type="radio" id="slide1" name="slide" checked>
-                        <img src="assets/img/api-league.png" alt="">
-                        <button class="Btn-pop" onclick="myFunction()">Video Projeto</button>
-                        <a href="https://github.com/keviwsilva/API-leagueoflegends" target="_blank">GitHub link</a>
-                    </li>
-                    <li class="pokedex">
-                         <input type="radio" id="slide2" name="slide">
-                        <img src="assets/img/pokedex.png" alt="">
-                        <button class="Btn-pop" onclick="myFunction2()">Video Projeto</button>
-                        <a href="https://github.com/keviwsilva/Pokedex" target="_blank">GitHub link</a>
-                    </li>
-                    <li class="conta">
-                        <input type="radio" id="slide3" name="slide">
-                       <img src="assets/img/contas.png" alt="">
-                       <button class="Btn-pop" onclick="myFunction3()">Video Projeto</button>
-                       <a href="https://github.com/keviwsilva/Gerenciamento-de-contas" target="_blank">GitHub link</a>
-                   </li>
+                        <li class="api-league">
+                            <input type="radio" id="slide1" name="slide" checked>
+                            <img src="assets/img/api-league.png" alt="" onclick="myFunction()">
+                            <button class="Btn-pop" onclick="myFunction()">Video Projeto</button>
+                            <a href="https://github.com/keviwsilva/API-leagueoflegends" target="_blank">GitHub link</a>
+                        </li>
+                        <li class="pokedex">
+                            <input type="radio" id="slide2" name="slide">
+                            <img src="assets/img/pokedex.png" alt="" onclick="myFunction2()">
+                            <button class="Btn-pop" onclick="myFunction2()">Video Projeto</button>
+                            <a href="https://github.com/keviwsilva/Pokedex" target="_blank">GitHub link</a>
+                        </li>
+                        <li class="conta">
+                            <input type="radio" id="slide3" name="slide">
+                            <img src="assets/img/contas.png" alt="" onclick="myFunction3()">
+                            <button class="Btn-pop" onclick="myFunction3()">Video Projeto</button>
+                            <a href="https://github.com/keviwsilva/Gerenciamento-de-contas" target="_blank">GitHub link</a>
+                        </li>
                     </ul>
                 </div>
                 <button class="arrow arrow-prev">&#10094;</i></button>
