--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="assets/img/header-img.svg" alt="">
             </div>
         </div>
-        <div class="carousel">
+        <div class="carousel" id="habilities">
             <i id="left" class="fa-solid fa-angle-left"></i>
             <div id="skills">
                 <div class="skill">
@@ -59,7 +59,7 @@
             </div>
             <i id="right"class="fa-solid fa-angle-right"></i>
         </div>
-        <div class="projects">
+        <div class="projects"  id="projects">
             <h1>Projetos</h1>
             <div class="topics">
                 <div class="project" >
@@ -110,7 +110,7 @@
         </div>
     </section>
     
-    <footer>
+    <footer id="footer">
         <h1>Contatos</h1>
         <div class="contatos">
             <a href="https://github.com/keviwsilva" target="_blank">
